<resources>
    <string name="app_name">Seren</string>

    <string name="navigation_home">Home</string>
    <string name="navigation_mood">Mood</string>
    <string name="navigation_music">Music</string>
    <string name="navigation_serena_place">SerenPlace</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="button_login">Button Login</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="seren_box">SerenBox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_recommendation_fragment_text_header">Create a playlist based on your latest mood!</string>
    <string name="recommend">Recommend</string>

    <string name="mode">Mode</string>
    <string name="match_mode">Match Mode</string>
    <string name="your_emotions">Your Emotions</string>
    <string name="card_music_title">Lazy Girl</string>
    <string name="card_music_album">The Boys</string>
    <string name="card_music_play">Play</string>
    <string name="mood_history">Mood History</string>
    <string name="mood_total">Total</string>

    <string name="mood_frame_open_camera_description">We will take your photo in 5 seconds, make sure not to overexaggerate your exspression for more accurate result!</string>
    <string name="start">Start</string>
    <string name="seren_box_session_description">We will take your photo every 5 seconds, make sure your front camera is facing you during the session!</string>

</resources>