<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg_img_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:clipChildren="true">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/jkt48" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@color/base_color_4"
                android:text="@string/card_music_title" />
            <TextView
                android:id="@+id/album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_color_4"
                android:text="@string/card_music_album"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:contentDescription="@string/card_music_play"
        android:layout_width="48dp"
        android:id="@+id/play"
        android:layout_height="48dp"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon="@drawable/ic_play_circle_24"
        app:iconGravity="start"
        app:iconSize="48dp"
        android:padding="0dp"
        app:iconPadding="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:text="@string/card_music_play"
        app:iconTint="@color/base_color_4"
        android:backgroundTint="@android:color/transparent"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>