<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:id="@+id/welcome_activity"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_color_1"
        android:alpha="0.3" />

    <LinearLayout
        android:id="@+id/welcome_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:gravity="center">
        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_logo"
            android:src="@drawable/serena_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/app_name"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/welcome_header">
        <androidx.cardview.widget.CardView
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:foregroundGravity="center"
            app:cardBackgroundColor="@color/base_color_3"
            app:cardCornerRadius="20dp"
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/login"
                android:textColor="@color/base_color_4"
                android:textSize="22sp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/login_button">
        <androidx.cardview.widget.CardView
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:foregroundGravity="center"
            app:cardBackgroundColor="@color/base_color_4"
            app:cardCornerRadius="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/register"
                android:textColor="@color/base_color_1"
                android:textSize="22sp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>