<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:id="@+id/activity_register"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_color_1"
        android:alpha="0.3" />

    <com.google.android.material.button.MaterialButton
        android:contentDescription="@string/button_login"
        android:layout_width="48dp"
        android:id="@+id/back"
        android:layout_height="48dp"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon="@drawable/ic_arrow_back_ios_new_24"
        app:iconSize="20dp"
        app:iconPadding="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:text="@string/back"
        app:iconTint="@color/sm_black"
        android:backgroundTint="@color/base_color_4"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
        />

    <TextView
        android:id="@+id/header_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textColor="@color/white"
        android:text="Register"/>

    <LinearLayout
        android:id="@+id/welcome_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/header_text_title"
        android:gravity="center">
        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_logo"
            android:src="@drawable/serena_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/welcome_header"
        android:id="@+id/input_username"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="Username"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/account"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="0dp"
                android:hint="Username"
                android:background="@drawable/rounded_10dp"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/input_username"
        android:id="@+id/input_email"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            android:text="Email"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_email_24"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/email"
                android:layout_width="match_parent"
                android:hint="Email"
                android:layout_height="55dp"
                android:padding="0dp"
                android:background="@drawable/rounded_10dp"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/input_email"
        android:id="@+id/input_password"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            android:text="Password"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textPassword"
                android:hint="Password"
                android:padding="0dp"
                android:maxLines="1"
                android:background="@drawable/rounded_10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/base_color_3"
        app:cardElevation="0dp"
        android:layout_below="@+id/input_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:foregroundGravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp">
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/base_color_4"
            android:text="Register" />
    </androidx.cardview.widget.CardView>


</RelativeLayout>
